--- a/Animations_ass/style.css
+++ b/Animations_ass/style.css
@@ -3,7 +3,7 @@ body{
 }
 
 
-.container {
+.rotateImages{
     display: flex;
     flex-direction:row;
     margin-top:250px;
@@ -14,30 +14,24 @@ body{
 
     
 }
-.rotateImg{
-    border-radius:22px;
-    border:2px solid;
-    border-color:rgb(60, 59, 59);
-   transition:transform 0.5s ease-in-out;
-    
-}
-.rotateImg:hover{
-    animation-play-state:running;
-}
 
 
-        .container img{
+
+
+        .rotateImages img{
+            box-shadow: 0px 0px 8px grey;
+            border-radius: 5px;
             max-width: 350px;
             transform-origin: center;
             transform: perspective(800px) rotateY(20deg);
             transition: 0.5s;
-            box-shadow: 0px 0px 8px grey;
-            border-radius: 5px;
+            
         }
-        .container:hover img{
+        .rotateImages:hover img{
             opacity: 0.3;
         }
-        .container img:hover {
-            transform: perspective(800px) rotateY(0deg);
+        .rotateImages img:hover {
+            transform: perspective(650px) rotateY(0deg);
             opacity: 1;
         }
+        
